// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root
        note"
  role="alert"
>
  <div
    className="icon"
  >
    <Icon
      icon="note"
      size="medium"
    />
  </div>
  <div
    className="message"
  >
    <div>
      Children
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        success"
  id="custom-id"
  role="alert"
>
  <div
    className="icon"
  >
    <Icon
      icon="check_circle"
      size="medium"
    />
  </div>
  <div
    className="message"
    id="custom-id__content"
  >
    <div>
      Children
    </div>
  </div>
</div>
`;
